--- a/index.html
+++ b/index.html
@@ -8,14 +8,62 @@
     <title>QuizApp</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS only -->
+    <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <!-- Bootstrap JavaScript Bundle with Popper -->
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body onload="render()">
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">QuizApp</span>
+        </div>
+    </nav>
 
+    <div class="container">
+        <div class="card quiz-card">
+            <img src="img/Group 5.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title" id="questionText">Frage</h5>
+
+
+                <div id="disableddiv">
+                    <!-- <div class="card quiz-answer mb-2" onclick="answer(0)">
+                        <div class="card-body" id="answer_0">
+                            Antwort
+                        </div>
+                    </div>
+
+
+                    <div class="card quiz-answer mb-2" onclick="answer(1)">
+                        <div class="card-body" id="answer_1">
+                            Antwort
+                        </div>
+                    </div>
+
+
+                    <div class="card quiz-answer mb-2" onclick="answer(2)">
+                        <div class="card-body" id="answer_2">
+                            Antwort
+                        </div>
+                    </div>
+
+
+                    <div class="card quiz-answer mb-2" onclick="answer(3)">
+                        <div class="card-body" id="answer_3">
+                            Antwort
+                        </div>
+                    </div> -->
+                </div>
+                <b>1</b> von <b id="allQuestion">5</b> Fragen
+                </span>
+                <button onclick="nextQuestion()" id="next-button" type="button" class="btn btn-warning" disabled>Nächte Frage</button>
+            </div>
+
+        </div>
+    </div>
+    </div>
 </body>
 
 </html>
