--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                     </div> <br>
                     <button class="share">SHARE</button> <br>
                     <button onclick="back()" class="replay">REPLAY</button>
-
                 </div>
-
             </div>
 
             <div class="card-body" id="questionBody">
@@ -50,38 +48,11 @@
                 <h5 class="card-title" id="questionText">Frage</h5>
 
                 <div id="disableddiv" class="">
-
-                    <!-- <div class="card quiz-answer mb-2" onclick="answer(0)">
-                        <div class="card-body" id="answer_0">
-                            Antwort
-                        </div>
-                    </div>
-
-
-                    <div class="card quiz-answer mb-2" onclick="answer(1)">
-                        <div class="card-body" id="answer_1">
-                            Antwort
-                        </div>
-                    </div>
-
-
-                    <div class="card quiz-answer mb-2" onclick="answer(2)">
-                        <div class="card-body" id="answer_2">
-                            Antwort
-                        </div>
-                    </div>
-
-
-                    <div class="card quiz-answer mb-2" onclick="answer(3)">
-                        <div class="card-body" id="answer_3">
-                            Antwort
-                        </div>
-                    </div> -->
                 </div>
                 <div>
-                    <span>
-                <b id="number">0</b> von <b id="allQuestion">5</b> Fragen
-                </span>
+                    <div>
+                        <b id="number">1</b> von <b id="allQuestion">5</b> Fragen
+                    </div>
                     <button onclick="nextQuestion()" id="next-button" type="button" class="btn btn-warning" disabled>Nächte Frage</button>
                 </div>
 
